fdgr46/parser.output
Zustand 66 Konflikte: 2 Schiebe/Reduziere
Zustand 96 Konflikte: 8 Schiebe/Reduziere
Zustand 97 Konflikte: 8 Schiebe/Reduziere
Zustand 98 Konflikte: 8 Schiebe/Reduziere
Zustand 99 Konflikte: 8 Schiebe/Reduziere
Zustand 100 Konflikte: 8 Schiebe/Reduziere
Zustand 101 Konflikte: 8 Schiebe/Reduziere
Zustand 104 Konflikte: 2 Schiebe/Reduziere, 8 Reduziere/Reduziere
Zustand 105 Konflikte: 2 Schiebe/Reduziere, 8 Reduziere/Reduziere
Zustand 108 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: program $end

    1 program: declarations

    2 declarations: /* leer */
    3             | type_def declarations
    4             | procedure declarations

    5 type_def: TYPE IDENT EQ typ SEMIC

    6 typ: IDENT
    7    | ARRAY LBRACK INTLIT RBRACK OF typ

    8 procedure: PROC IDENT LPAREN opt_parameters RPAREN LCURL opt_variables opt_statements RCURL

    9 parameter: IDENT COLON typ
   10          | REF IDENT COLON typ

   11 add_parameter: parameter
   12              | parameter COMMA add_parameter

   13 opt_parameters: /* leer */
   14               | add_parameter

   15 variable: IDENT
   16         | variable LBRACK expression RBRACK

   17 variable_decl: VAR IDENT COLON typ SEMIC

   18 opt_variables: /* leer */
   19              | variable_decl opt_variables

   20 expression: expression PLUS term
   21           | expression MINUS term
   22           | term

   23 term: term STAR factor_expr
   24     | term SLASH factor_expr
   25     | factor_expr
   26     | bool_expr

   27 factor_expr: MINUS factor_expr
   28            | INTLIT
   29            | variable
   30            | LPAREN expression RPAREN

   31 bool_expr: expression EQ expression
   32          | expression NE expression
   33          | expression LT expression
   34          | expression LE expression
   35          | expression GT expression
   36          | expression GE expression

   37 add_expression: expression
   38               | expression COMMA add_expression

   39 opt_expressions: /* leer */
   40                | add_expression

   41 statement: SEMIC
   42          | variable ASGN expression SEMIC
   43          | IF LPAREN opt_expressions RPAREN statement
   44          | IF LPAREN opt_expressions RPAREN statement ELSE statement
   45          | WHILE LPAREN opt_expressions RPAREN statement
   46          | LCURL opt_statements RCURL
   47          | IDENT LPAREN opt_expressions RPAREN SEMIC

   48 opt_statements: /* leer */
   49               | statement opt_statements


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
ARRAY (258) 7
ELSE (259) 44
IF (260) 43 44
OF (261) 7
PROC (262) 8
REF (263) 10
TYPE (264) 5
VAR (265) 17
WHILE (266) 45
LPAREN (267) 8 30 43 44 45 47
RPAREN (268) 8 30 43 44 45 47
LBRACK (269) 7 16
RBRACK (270) 7 16
LCURL (271) 8 46
RCURL (272) 8 46
EQ (273) 5 31
NE (274) 32
LT (275) 33
LE (276) 34
GT (277) 35
GE (278) 36
ASGN (279) 42
COLON (280) 9 10 17
COMMA (281) 12 38
SEMIC (282) 5 17 41 42 47
PLUS (283) 20
MINUS (284) 21 27
STAR (285) 23
SLASH (286) 24
IDENT (287) 5 6 8 9 10 15 17 47
INTLIT (288) 7 28


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (34)
    auf der linken Seite: 0
program (35)
    auf der linken Seite: 1, auf der rechten Seite: 0
declarations (36)
    auf der linken Seite: 2 3 4, auf der rechten Seite: 1 3 4
type_def (37)
    auf der linken Seite: 5, auf der rechten Seite: 3
typ (38)
    auf der linken Seite: 6 7, auf der rechten Seite: 5 7 9 10 17
procedure (39)
    auf der linken Seite: 8, auf der rechten Seite: 4
parameter (40)
    auf der linken Seite: 9 10, auf der rechten Seite: 11 12
add_parameter (41)
    auf der linken Seite: 11 12, auf der rechten Seite: 12 14
opt_parameters (42)
    auf der linken Seite: 13 14, auf der rechten Seite: 8
variable (43)
    auf der linken Seite: 15 16, auf der rechten Seite: 16 29 42
variable_decl (44)
    auf der linken Seite: 17, auf der rechten Seite: 19
opt_variables (45)
    auf der linken Seite: 18 19, auf der rechten Seite: 8 19
expression (46)
    auf der linken Seite: 20 21 22, auf der rechten Seite: 16 20 21
    30 31 32 33 34 35 36 37 38 42
term (47)
    auf der linken Seite: 23 24 25 26, auf der rechten Seite: 20 21
    22 23 24
factor_expr (48)
    auf der linken Seite: 27 28 29 30, auf der rechten Seite: 23 24
    25 27
bool_expr (49)
    auf der linken Seite: 31 32 33 34 35 36, auf der rechten Seite:
    26
add_expression (50)
    auf der linken Seite: 37 38, auf der rechten Seite: 38 40
opt_expressions (51)
    auf der linken Seite: 39 40, auf der rechten Seite: 43 44 45 47
statement (52)
    auf der linken Seite: 41 42 43 44 45 46 47, auf der rechten Seite:
    43 44 45 49
opt_statements (53)
    auf der linken Seite: 48 49, auf der rechten Seite: 8 46 49


Zustand 0

    0 $accept: . program $end

    PROC  schiebe und gehe zu Zustand 1 über
    TYPE  schiebe und gehe zu Zustand 2 über

    $default  reduziere mit Regel 2 (declarations)

    program       gehe zu Zustand 3 über
    declarations  gehe zu Zustand 4 über
    type_def      gehe zu Zustand 5 über
    procedure     gehe zu Zustand 6 über


Zustand 1

    8 procedure: PROC . IDENT LPAREN opt_parameters RPAREN LCURL opt_variables opt_statements RCURL

    IDENT  schiebe und gehe zu Zustand 7 über


Zustand 2

    5 type_def: TYPE . IDENT EQ typ SEMIC

    IDENT  schiebe und gehe zu Zustand 8 über


Zustand 3

    0 $accept: program . $end

    $end  schiebe und gehe zu Zustand 9 über


Zustand 4

    1 program: declarations .

    $default  reduziere mit Regel 1 (program)


Zustand 5

    3 declarations: type_def . declarations

    PROC  schiebe und gehe zu Zustand 1 über
    TYPE  schiebe und gehe zu Zustand 2 über

    $default  reduziere mit Regel 2 (declarations)

    declarations  gehe zu Zustand 10 über
    type_def      gehe zu Zustand 5 über
    procedure     gehe zu Zustand 6 über


Zustand 6

    4 declarations: procedure . declarations

    PROC  schiebe und gehe zu Zustand 1 über
    TYPE  schiebe und gehe zu Zustand 2 über

    $default  reduziere mit Regel 2 (declarations)

    declarations  gehe zu Zustand 11 über
    type_def      gehe zu Zustand 5 über
    procedure     gehe zu Zustand 6 über


Zustand 7

    8 procedure: PROC IDENT . LPAREN opt_parameters RPAREN LCURL opt_variables opt_statements RCURL

    LPAREN  schiebe und gehe zu Zustand 12 über


Zustand 8

    5 type_def: TYPE IDENT . EQ typ SEMIC

    EQ  schiebe und gehe zu Zustand 13 über


Zustand 9

    0 $accept: program $end .

    $default  annehmen


Zustand 10

    3 declarations: type_def declarations .

    $default  reduziere mit Regel 3 (declarations)


Zustand 11

    4 declarations: procedure declarations .

    $default  reduziere mit Regel 4 (declarations)


Zustand 12

    8 procedure: PROC IDENT LPAREN . opt_parameters RPAREN LCURL opt_variables opt_statements RCURL

    REF    schiebe und gehe zu Zustand 14 über
    IDENT  schiebe und gehe zu Zustand 15 über

    $default  reduziere mit Regel 13 (opt_parameters)

    parameter       gehe zu Zustand 16 über
    add_parameter   gehe zu Zustand 17 über
    opt_parameters  gehe zu Zustand 18 über


Zustand 13

    5 type_def: TYPE IDENT EQ . typ SEMIC

    ARRAY  schiebe und gehe zu Zustand 19 über
    IDENT  schiebe und gehe zu Zustand 20 über

    typ  gehe zu Zustand 21 über


Zustand 14

   10 parameter: REF . IDENT COLON typ

    IDENT  schiebe und gehe zu Zustand 22 über


Zustand 15

    9 parameter: IDENT . COLON typ

    COLON  schiebe und gehe zu Zustand 23 über


Zustand 16

   11 add_parameter: parameter .
   12              | parameter . COMMA add_parameter

    COMMA  schiebe und gehe zu Zustand 24 über

    $default  reduziere mit Regel 11 (add_parameter)


Zustand 17

   14 opt_parameters: add_parameter .

    $default  reduziere mit Regel 14 (opt_parameters)


Zustand 18

    8 procedure: PROC IDENT LPAREN opt_parameters . RPAREN LCURL opt_variables opt_statements RCURL

    RPAREN  schiebe und gehe zu Zustand 25 über


Zustand 19

    7 typ: ARRAY . LBRACK INTLIT RBRACK OF typ

    LBRACK  schiebe und gehe zu Zustand 26 über


Zustand 20

    6 typ: IDENT .

    $default  reduziere mit Regel 6 (typ)


Zustand 21

    5 type_def: TYPE IDENT EQ typ . SEMIC

    SEMIC  schiebe und gehe zu Zustand 27 über


Zustand 22

   10 parameter: REF IDENT . COLON typ

    COLON  schiebe und gehe zu Zustand 28 über


Zustand 23

    9 parameter: IDENT COLON . typ

    ARRAY  schiebe und gehe zu Zustand 19 über
    IDENT  schiebe und gehe zu Zustand 20 über

    typ  gehe zu Zustand 29 über


Zustand 24

   12 add_parameter: parameter COMMA . add_parameter

    REF    schiebe und gehe zu Zustand 14 über
    IDENT  schiebe und gehe zu Zustand 15 über

    parameter      gehe zu Zustand 16 über
    add_parameter  gehe zu Zustand 30 über


Zustand 25

    8 procedure: PROC IDENT LPAREN opt_parameters RPAREN . LCURL opt_variables opt_statements RCURL

    LCURL  schiebe und gehe zu Zustand 31 über


Zustand 26

    7 typ: ARRAY LBRACK . INTLIT RBRACK OF typ

    INTLIT  schiebe und gehe zu Zustand 32 über


Zustand 27

    5 type_def: TYPE IDENT EQ typ SEMIC .

    $default  reduziere mit Regel 5 (type_def)


Zustand 28

   10 parameter: REF IDENT COLON . typ

    ARRAY  schiebe und gehe zu Zustand 19 über
    IDENT  schiebe und gehe zu Zustand 20 über

    typ  gehe zu Zustand 33 über


Zustand 29

    9 parameter: IDENT COLON typ .

    $default  reduziere mit Regel 9 (parameter)


Zustand 30

   12 add_parameter: parameter COMMA add_parameter .

    $default  reduziere mit Regel 12 (add_parameter)


Zustand 31

    8 procedure: PROC IDENT LPAREN opt_parameters RPAREN LCURL . opt_variables opt_statements RCURL

    VAR  schiebe und gehe zu Zustand 34 über

    $default  reduziere mit Regel 18 (opt_variables)

    variable_decl  gehe zu Zustand 35 über
    opt_variables  gehe zu Zustand 36 über


Zustand 32

    7 typ: ARRAY LBRACK INTLIT . RBRACK OF typ

    RBRACK  schiebe und gehe zu Zustand 37 über


Zustand 33

   10 parameter: REF IDENT COLON typ .

    $default  reduziere mit Regel 10 (parameter)


Zustand 34

   17 variable_decl: VAR . IDENT COLON typ SEMIC

    IDENT  schiebe und gehe zu Zustand 38 über


Zustand 35

   19 opt_variables: variable_decl . opt_variables

    VAR  schiebe und gehe zu Zustand 34 über

    $default  reduziere mit Regel 18 (opt_variables)

    variable_decl  gehe zu Zustand 35 über
    opt_variables  gehe zu Zustand 39 über


Zustand 36

    8 procedure: PROC IDENT LPAREN opt_parameters RPAREN LCURL opt_variables . opt_statements RCURL

    IF     schiebe und gehe zu Zustand 40 über
    WHILE  schiebe und gehe zu Zustand 41 über
    LCURL  schiebe und gehe zu Zustand 42 über
    SEMIC  schiebe und gehe zu Zustand 43 über
    IDENT  schiebe und gehe zu Zustand 44 über

    $default  reduziere mit Regel 48 (opt_statements)

    variable        gehe zu Zustand 45 über
    statement       gehe zu Zustand 46 über
    opt_statements  gehe zu Zustand 47 über


Zustand 37

    7 typ: ARRAY LBRACK INTLIT RBRACK . OF typ

    OF  schiebe und gehe zu Zustand 48 über


Zustand 38

   17 variable_decl: VAR IDENT . COLON typ SEMIC

    COLON  schiebe und gehe zu Zustand 49 über


Zustand 39

   19 opt_variables: variable_decl opt_variables .

    $default  reduziere mit Regel 19 (opt_variables)


Zustand 40

   43 statement: IF . LPAREN opt_expressions RPAREN statement
   44          | IF . LPAREN opt_expressions RPAREN statement ELSE statement

    LPAREN  schiebe und gehe zu Zustand 50 über


Zustand 41

   45 statement: WHILE . LPAREN opt_expressions RPAREN statement

    LPAREN  schiebe und gehe zu Zustand 51 über


Zustand 42

   46 statement: LCURL . opt_statements RCURL

    IF     schiebe und gehe zu Zustand 40 über
    WHILE  schiebe und gehe zu Zustand 41 über
    LCURL  schiebe und gehe zu Zustand 42 über
    SEMIC  schiebe und gehe zu Zustand 43 über
    IDENT  schiebe und gehe zu Zustand 44 über

    $default  reduziere mit Regel 48 (opt_statements)

    variable        gehe zu Zustand 45 über
    statement       gehe zu Zustand 46 über
    opt_statements  gehe zu Zustand 52 über


Zustand 43

   41 statement: SEMIC .

    $default  reduziere mit Regel 41 (statement)


Zustand 44

   15 variable: IDENT .
   47 statement: IDENT . LPAREN opt_expressions RPAREN SEMIC

    LPAREN  schiebe und gehe zu Zustand 53 über

    $default  reduziere mit Regel 15 (variable)


Zustand 45

   16 variable: variable . LBRACK expression RBRACK
   42 statement: variable . ASGN expression SEMIC

    LBRACK  schiebe und gehe zu Zustand 54 über
    ASGN    schiebe und gehe zu Zustand 55 über


Zustand 46

   49 opt_statements: statement . opt_statements

    IF     schiebe und gehe zu Zustand 40 über
    WHILE  schiebe und gehe zu Zustand 41 über
    LCURL  schiebe und gehe zu Zustand 42 über
    SEMIC  schiebe und gehe zu Zustand 43 über
    IDENT  schiebe und gehe zu Zustand 44 über

    $default  reduziere mit Regel 48 (opt_statements)

    variable        gehe zu Zustand 45 über
    statement       gehe zu Zustand 46 über
    opt_statements  gehe zu Zustand 56 über


Zustand 47

    8 procedure: PROC IDENT LPAREN opt_parameters RPAREN LCURL opt_variables opt_statements . RCURL

    RCURL  schiebe und gehe zu Zustand 57 über


Zustand 48

    7 typ: ARRAY LBRACK INTLIT RBRACK OF . typ

    ARRAY  schiebe und gehe zu Zustand 19 über
    IDENT  schiebe und gehe zu Zustand 20 über

    typ  gehe zu Zustand 58 über


Zustand 49

   17 variable_decl: VAR IDENT COLON . typ SEMIC

    ARRAY  schiebe und gehe zu Zustand 19 über
    IDENT  schiebe und gehe zu Zustand 20 über

    typ  gehe zu Zustand 59 über


Zustand 50

   43 statement: IF LPAREN . opt_expressions RPAREN statement
   44          | IF LPAREN . opt_expressions RPAREN statement ELSE statement

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    $default  reduziere mit Regel 39 (opt_expressions)

    variable         gehe zu Zustand 64 über
    expression       gehe zu Zustand 65 über
    term             gehe zu Zustand 66 über
    factor_expr      gehe zu Zustand 67 über
    bool_expr        gehe zu Zustand 68 über
    add_expression   gehe zu Zustand 69 über
    opt_expressions  gehe zu Zustand 70 über


Zustand 51

   45 statement: WHILE LPAREN . opt_expressions RPAREN statement

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    $default  reduziere mit Regel 39 (opt_expressions)

    variable         gehe zu Zustand 64 über
    expression       gehe zu Zustand 65 über
    term             gehe zu Zustand 66 über
    factor_expr      gehe zu Zustand 67 über
    bool_expr        gehe zu Zustand 68 über
    add_expression   gehe zu Zustand 69 über
    opt_expressions  gehe zu Zustand 71 über


Zustand 52

   46 statement: LCURL opt_statements . RCURL

    RCURL  schiebe und gehe zu Zustand 72 über


Zustand 53

   47 statement: IDENT LPAREN . opt_expressions RPAREN SEMIC

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    $default  reduziere mit Regel 39 (opt_expressions)

    variable         gehe zu Zustand 64 über
    expression       gehe zu Zustand 65 über
    term             gehe zu Zustand 66 über
    factor_expr      gehe zu Zustand 67 über
    bool_expr        gehe zu Zustand 68 über
    add_expression   gehe zu Zustand 69 über
    opt_expressions  gehe zu Zustand 73 über


Zustand 54

   16 variable: variable LBRACK . expression RBRACK

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 74 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 55

   42 statement: variable ASGN . expression SEMIC

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 75 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 56

   49 opt_statements: statement opt_statements .

    $default  reduziere mit Regel 49 (opt_statements)


Zustand 57

    8 procedure: PROC IDENT LPAREN opt_parameters RPAREN LCURL opt_variables opt_statements RCURL .

    $default  reduziere mit Regel 8 (procedure)


Zustand 58

    7 typ: ARRAY LBRACK INTLIT RBRACK OF typ .

    $default  reduziere mit Regel 7 (typ)


Zustand 59

   17 variable_decl: VAR IDENT COLON typ . SEMIC

    SEMIC  schiebe und gehe zu Zustand 76 über


Zustand 60

   30 factor_expr: LPAREN . expression RPAREN

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 77 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 61

   27 factor_expr: MINUS . factor_expr

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    factor_expr  gehe zu Zustand 78 über


Zustand 62

   15 variable: IDENT .

    $default  reduziere mit Regel 15 (variable)


Zustand 63

   28 factor_expr: INTLIT .

    $default  reduziere mit Regel 28 (factor_expr)


Zustand 64

   16 variable: variable . LBRACK expression RBRACK
   29 factor_expr: variable .

    LBRACK  schiebe und gehe zu Zustand 54 über

    $default  reduziere mit Regel 29 (factor_expr)


Zustand 65

   20 expression: expression . PLUS term
   21           | expression . MINUS term
   31 bool_expr: expression . EQ expression
   32          | expression . NE expression
   33          | expression . LT expression
   34          | expression . LE expression
   35          | expression . GT expression
   36          | expression . GE expression
   37 add_expression: expression .
   38               | expression . COMMA add_expression

    EQ     schiebe und gehe zu Zustand 79 über
    NE     schiebe und gehe zu Zustand 80 über
    LT     schiebe und gehe zu Zustand 81 über
    LE     schiebe und gehe zu Zustand 82 über
    GT     schiebe und gehe zu Zustand 83 über
    GE     schiebe und gehe zu Zustand 84 über
    COMMA  schiebe und gehe zu Zustand 85 über
    PLUS   schiebe und gehe zu Zustand 86 über
    MINUS  schiebe und gehe zu Zustand 87 über

    $default  reduziere mit Regel 37 (add_expression)


Zustand 66

   22 expression: term .
   23 term: term . STAR factor_expr
   24     | term . SLASH factor_expr

    STAR   schiebe und gehe zu Zustand 88 über
    SLASH  schiebe und gehe zu Zustand 89 über

    STAR      [reduziere mit Regel 22 (expression)]
    SLASH     [reduziere mit Regel 22 (expression)]
    $default  reduziere mit Regel 22 (expression)


Zustand 67

   25 term: factor_expr .

    $default  reduziere mit Regel 25 (term)


Zustand 68

   26 term: bool_expr .

    $default  reduziere mit Regel 26 (term)


Zustand 69

   40 opt_expressions: add_expression .

    $default  reduziere mit Regel 40 (opt_expressions)


Zustand 70

   43 statement: IF LPAREN opt_expressions . RPAREN statement
   44          | IF LPAREN opt_expressions . RPAREN statement ELSE statement

    RPAREN  schiebe und gehe zu Zustand 90 über


Zustand 71

   45 statement: WHILE LPAREN opt_expressions . RPAREN statement

    RPAREN  schiebe und gehe zu Zustand 91 über


Zustand 72

   46 statement: LCURL opt_statements RCURL .

    $default  reduziere mit Regel 46 (statement)


Zustand 73

   47 statement: IDENT LPAREN opt_expressions . RPAREN SEMIC

    RPAREN  schiebe und gehe zu Zustand 92 über


Zustand 74

   16 variable: variable LBRACK expression . RBRACK
   20 expression: expression . PLUS term
   21           | expression . MINUS term
   31 bool_expr: expression . EQ expression
   32          | expression . NE expression
   33          | expression . LT expression
   34          | expression . LE expression
   35          | expression . GT expression
   36          | expression . GE expression

    RBRACK  schiebe und gehe zu Zustand 93 über
    EQ      schiebe und gehe zu Zustand 79 über
    NE      schiebe und gehe zu Zustand 80 über
    LT      schiebe und gehe zu Zustand 81 über
    LE      schiebe und gehe zu Zustand 82 über
    GT      schiebe und gehe zu Zustand 83 über
    GE      schiebe und gehe zu Zustand 84 über
    PLUS    schiebe und gehe zu Zustand 86 über
    MINUS   schiebe und gehe zu Zustand 87 über


Zustand 75

   20 expression: expression . PLUS term
   21           | expression . MINUS term
   31 bool_expr: expression . EQ expression
   32          | expression . NE expression
   33          | expression . LT expression
   34          | expression . LE expression
   35          | expression . GT expression
   36          | expression . GE expression
   42 statement: variable ASGN expression . SEMIC

    EQ     schiebe und gehe zu Zustand 79 über
    NE     schiebe und gehe zu Zustand 80 über
    LT     schiebe und gehe zu Zustand 81 über
    LE     schiebe und gehe zu Zustand 82 über
    GT     schiebe und gehe zu Zustand 83 über
    GE     schiebe und gehe zu Zustand 84 über
    SEMIC  schiebe und gehe zu Zustand 94 über
    PLUS   schiebe und gehe zu Zustand 86 über
    MINUS  schiebe und gehe zu Zustand 87 über


Zustand 76

   17 variable_decl: VAR IDENT COLON typ SEMIC .

    $default  reduziere mit Regel 17 (variable_decl)


Zustand 77

   20 expression: expression . PLUS term
   21           | expression . MINUS term
   30 factor_expr: LPAREN expression . RPAREN
   31 bool_expr: expression . EQ expression
   32          | expression . NE expression
   33          | expression . LT expression
   34          | expression . LE expression
   35          | expression . GT expression
   36          | expression . GE expression

    RPAREN  schiebe und gehe zu Zustand 95 über
    EQ      schiebe und gehe zu Zustand 79 über
    NE      schiebe und gehe zu Zustand 80 über
    LT      schiebe und gehe zu Zustand 81 über
    LE      schiebe und gehe zu Zustand 82 über
    GT      schiebe und gehe zu Zustand 83 über
    GE      schiebe und gehe zu Zustand 84 über
    PLUS    schiebe und gehe zu Zustand 86 über
    MINUS   schiebe und gehe zu Zustand 87 über


Zustand 78

   27 factor_expr: MINUS factor_expr .

    $default  reduziere mit Regel 27 (factor_expr)


Zustand 79

   31 bool_expr: expression EQ . expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 96 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 80

   32 bool_expr: expression NE . expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 97 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 81

   33 bool_expr: expression LT . expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 98 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 82

   34 bool_expr: expression LE . expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 99 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 83

   35 bool_expr: expression GT . expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 100 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 84

   36 bool_expr: expression GE . expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 101 über
    term         gehe zu Zustand 66 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 85

   38 add_expression: expression COMMA . add_expression

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable        gehe zu Zustand 64 über
    expression      gehe zu Zustand 65 über
    term            gehe zu Zustand 66 über
    factor_expr     gehe zu Zustand 67 über
    bool_expr       gehe zu Zustand 68 über
    add_expression  gehe zu Zustand 102 über


Zustand 86

   20 expression: expression PLUS . term

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 103 über
    term         gehe zu Zustand 104 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 87

   21 expression: expression MINUS . term

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    expression   gehe zu Zustand 103 über
    term         gehe zu Zustand 105 über
    factor_expr  gehe zu Zustand 67 über
    bool_expr    gehe zu Zustand 68 über


Zustand 88

   23 term: term STAR . factor_expr

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    factor_expr  gehe zu Zustand 106 über


Zustand 89

   24 term: term SLASH . factor_expr

    LPAREN  schiebe und gehe zu Zustand 60 über
    MINUS   schiebe und gehe zu Zustand 61 über
    IDENT   schiebe und gehe zu Zustand 62 über
    INTLIT  schiebe und gehe zu Zustand 63 über

    variable     gehe zu Zustand 64 über
    factor_expr  gehe zu Zustand 107 über


Zustand 90

   43 statement: IF LPAREN opt_expressions RPAREN . statement
   44          | IF LPAREN opt_expressions RPAREN . statement ELSE statement

    IF     schiebe und gehe zu Zustand 40 über
    WHILE  schiebe und gehe zu Zustand 41 über
    LCURL  schiebe und gehe zu Zustand 42 über
    SEMIC  schiebe und gehe zu Zustand 43 über
    IDENT  schiebe und gehe zu Zustand 44 über

    variable   gehe zu Zustand 45 über
    statement  gehe zu Zustand 108 über


Zustand 91

   45 statement: WHILE LPAREN opt_expressions RPAREN . statement

    IF     schiebe und gehe zu Zustand 40 über
    WHILE  schiebe und gehe zu Zustand 41 über
    LCURL  schiebe und gehe zu Zustand 42 über
    SEMIC  schiebe und gehe zu Zustand 43 über
    IDENT  schiebe und gehe zu Zustand 44 über

    variable   gehe zu Zustand 45 über
    statement  gehe zu Zustand 109 über


Zustand 92

   47 statement: IDENT LPAREN opt_expressions RPAREN . SEMIC

    SEMIC  schiebe und gehe zu Zustand 110 über


Zustand 93

   16 variable: variable LBRACK expression RBRACK .

    $default  reduziere mit Regel 16 (variable)


Zustand 94

   42 statement: variable ASGN expression SEMIC .

    $default  reduziere mit Regel 42 (statement)


Zustand 95

   30 factor_expr: LPAREN expression RPAREN .

    $default  reduziere mit Regel 30 (factor_expr)


Zustand 96

   20 expression: expression . PLUS term
   21           | expression . MINUS term
   31 bool_expr: expression . EQ expression
   31          | expression EQ expression .
   32          | expression . NE expression
   33          | expression . LT expression
   34          | expression . LE expression
   35          | expression . GT expression
   36          | expression . GE expression

    EQ     schiebe und gehe zu Zustand 79 über
    NE     schiebe und gehe zu Zustand 80 über
    LT     schiebe und gehe zu Zustand 81 über
    LE     schiebe und gehe zu Zustand 82 über
    GT     schiebe und gehe zu Zustand 83 über
    GE     schiebe und gehe zu Zustand 84 über
    PLUS   schiebe und gehe zu Zustand 86 über
    MINUS  schiebe und gehe zu Zustand 87 über

    EQ        [reduziere mit Regel 31 (bool_expr)]
    NE        [reduziere mit Regel 31 (bool_expr)]
    LT        [reduziere mit Regel 31 (bool_expr)]
    LE        [reduziere mit Regel 31 (bool_expr)]
    GT        [reduziere mit Regel 31 (bool_expr)]
    GE        [reduziere mit Regel 31 (bool_expr)]
    PLUS      [reduziere mit Regel 31 (bool_expr)]
    MINUS     [reduziere mit Regel 31 (bool_expr)]
    $default  reduziere mit Regel 31 (bool_expr)


Zustand 97

   20 expression: expression . PLUS term
   21           | expression . MINUS term
   31 bool_expr: expression . EQ expression
   32          | expression . NE expression
   32          | expression NE expression .
   33          | expression . LT expression
   34          | expression . LE expression
   35          | expression . GT expression
   36          | expression . GE expression
